[package]
name = "laminar-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_db"
description = "Unified database facade for LaminarDB"

[features]
default = []
api = []  # FFI-friendly API module for language bindings
ffi = ["api", "arrow/ffi"]  # C FFI layer (extern "C" functions, cbindgen headers, Arrow C Data Interface)
kafka = ["laminar-connectors/kafka"]
postgres-cdc = ["laminar-connectors/postgres-cdc"]
postgres-sink = ["laminar-connectors/postgres-sink"]
delta-lake = ["laminar-connectors/delta-lake"]
websocket = ["laminar-connectors/websocket"]
mysql-cdc = ["laminar-connectors/mysql-cdc"]
mongodb-cdc = ["laminar-connectors/mongodb-cdc"]
iceberg = ["laminar-connectors/iceberg"]
delta-lake-s3 = ["laminar-connectors/delta-lake-s3"]
delta-lake-azure = ["laminar-connectors/delta-lake-azure"]
delta-lake-gcs = ["laminar-connectors/delta-lake-gcs"]
delta-lake-unity = ["laminar-connectors/delta-lake-unity"]
delta-lake-glue = ["laminar-connectors/delta-lake-glue"]
delta-lake-all = ["delta-lake", "delta-lake-s3", "delta-lake-azure", "delta-lake-gcs", "delta-lake-unity", "delta-lake-glue"]
parquet-lookup = ["laminar-connectors/parquet-lookup"]
files = ["laminar-connectors/files"]
otel = ["laminar-connectors/otel"]
cluster-unstable = ["laminar-core/cluster-unstable", "laminar-sql/cluster-unstable"]
# Phase 0 failure-scenario gates. Each flips on when the corresponding
# phase of `docs/plans/cluster-production-readiness.md` lands; the
# cluster_e2e_failures.rs test switches its assertions from "demonstrates
# the bug" to "demonstrates the fix" when its gate is enabled. Preferred
# over `#[ignore]` so flipping the feature is what un-gates the test.
phase-1-recovery = ["cluster-unstable"]
phase-2-rebalance = ["cluster-unstable"]
aws = ["laminar-storage/aws"]
gcs = ["laminar-storage/gcs"]
azure = ["laminar-storage/azure"]

[dependencies]
laminar-core = { path = "../laminar-core", version = "0.20.2" }
laminar-sql = { path = "../laminar-sql", version = "0.20.2" }
laminar-storage = { path = "../laminar-storage", version = "0.20.2" }
laminar-connectors = { path = "../laminar-connectors", version = "0.20.2" }

# Arrow
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# DataFusion
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# SQL parser (for AST type references)
sqlparser = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
crossfire = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Fast hash maps (for DAG operator state maps)
rustc-hash = { workspace = true }

# Small-vec optimization for graph routing tables
smallvec = { workspace = true }

# Fast DoS-resistant hash map (for group-by keys from user SQL)
ahash = { workspace = true }

# Observability
tracing = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Zero-copy byte buffers (used by state backend payloads).
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
laminar-derive = { path = "../laminar-derive", version = "0.20.2" }
laminar-connectors = { path = "../laminar-connectors", version = "0.20.2", features = ["testing"] }
criterion = { workspace = true }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
# Kafka producer/admin client used by `kafka_docker_scenarios.rs` integration tests.
# Tests skip gracefully when the Redpanda broker started by
# `tests/docker/compose.yml` is not reachable on `localhost:19092`.
# On Windows the build picks up OpenSSL via `OPENSSL_DIR`
# (`C:\Program Files\OpenSSL-Win64` by default).

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "ssl-vendored"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# S3-compatible object store client used by the MinIO-backed integration
# test. Workspace feature set + aws for the AmazonS3 builder.
object_store = { workspace = true, features = ["aws"] }

[[bench]]
name = "recovery_bench"
harness = false

[[bench]]
name = "stream_executor_bench"
harness = false
