[package]
name = "laminar-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_db"
description = "Unified database facade for LaminarDB"

[features]
default = []
api = []  # FFI-friendly API module for language bindings
ffi = ["api", "arrow/ffi"]  # C FFI layer (extern "C" functions, cbindgen headers, Arrow C Data Interface)
kafka = ["laminar-connectors/kafka"]
postgres-cdc = ["laminar-connectors/postgres-cdc"]
postgres-sink = ["laminar-connectors/postgres-sink"]
delta-lake = ["laminar-connectors/delta-lake"]
websocket = ["laminar-connectors/websocket"]
mysql-cdc = ["laminar-connectors/mysql-cdc"]
mongodb-cdc = ["laminar-connectors/mongodb-cdc"]
iceberg = ["laminar-connectors/iceberg"]
delta-lake-s3 = ["laminar-connectors/delta-lake-s3"]
delta-lake-azure = ["laminar-connectors/delta-lake-azure"]
delta-lake-gcs = ["laminar-connectors/delta-lake-gcs"]
delta-lake-unity = ["laminar-connectors/delta-lake-unity"]
delta-lake-glue = ["laminar-connectors/delta-lake-glue"]
delta-lake-all = ["delta-lake", "delta-lake-s3", "delta-lake-azure", "delta-lake-gcs", "delta-lake-unity", "delta-lake-glue"]
parquet-lookup = ["laminar-connectors/parquet-lookup"]
files = ["laminar-connectors/files"]
otel = ["laminar-connectors/otel"]
nats = ["laminar-connectors/nats"]
cluster-unstable = ["laminar-core/cluster-unstable", "laminar-sql/cluster-unstable"]
aws = ["laminar-storage/aws"]
gcs = ["laminar-storage/gcs"]
azure = ["laminar-storage/azure"]

[dependencies]
laminar-core = { path = "../laminar-core", version = "0.22.0" }
laminar-sql = { path = "../laminar-sql", version = "0.22.0" }
laminar-storage = { path = "../laminar-storage", version = "0.22.0" }
laminar-connectors = { path = "../laminar-connectors", version = "0.22.0" }

# Arrow
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# DataFusion
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-optimizer = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# rkyv for operator checkpoint state. Hot-path structs (GroupCheckpoint,
# JoinStateCheckpoint, etc.) carry Arrow IPC `Vec<u8>` blobs — serde_json
# encoded each byte as a JSON decimal (3-4× size + per-byte format cost).
# rkyv walks bytes raw and produces aligned archives; matches existing
# convention (laminar-core uses it for NodeId, NodeInfo).
rkyv = { workspace = true }

# Error handling
thiserror = { workspace = true }

# SQL parser (for AST type references)
sqlparser = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
trait-variant = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
crossfire = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Fast hash maps (for DAG operator state maps)
rustc-hash = { workspace = true }

# Small-vec optimization for graph routing tables
smallvec = { workspace = true }

# Fast DoS-resistant hash map (for group-by keys from user SQL)
ahash = { workspace = true }

# Observability
tracing = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Zero-copy byte buffers (used by state backend payloads).
bytes = { workspace = true }

# Object-store handle for the auto-wired 2PC decision store (single-instance
# uses `LocalFileSystem`; cluster reuses the configured remote store).
object_store = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
laminar-derive = { path = "../laminar-derive", version = "0.22.0" }
laminar-connectors = { path = "../laminar-connectors", version = "0.22.0", features = ["testing"] }
criterion = { workspace = true }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
# Kafka producer/admin client used by `kafka_docker_scenarios.rs` integration tests.
# Tests skip gracefully when the Redpanda broker started by
# `tests/docker/compose.yml` is not reachable on `localhost:19092`.
# On Windows the build picks up OpenSSL via `OPENSSL_DIR`
# (`C:\Program Files\OpenSSL-Win64` by default).

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "ssl-vendored"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# S3-compatible object store client used by the MinIO-backed integration
# test. Workspace feature set + aws for the AmazonS3 builder.
object_store = { workspace = true, features = ["aws"] }

[[bench]]
name = "recovery_bench"
harness = false

[[bench]]
name = "stream_executor_bench"
harness = false

[[bench]]
name = "hot_path_micro"
harness = false
