[package]
name = "laminar-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_server"
description = "Standalone server binary for LaminarDB"
publish = false

[[bin]]
name = "laminardb"
path = "src/main.rs"

[dependencies]
# All LaminarDB crates
laminar-core = { path = "../laminar-core", version = "0.20.2" }
laminar-sql = { path = "../laminar-sql", version = "0.20.2" }
laminar-storage = { path = "../laminar-storage", version = "0.20.2" }
laminar-connectors = { path = "../laminar-connectors", version = "0.20.2" }
laminar-db = { path = "../laminar-db", version = "0.20.2", features = ["api"] }

# Arrow (for WS JSON serialization)
arrow-array = { workspace = true }
arrow-json = { workspace = true }
parking_lot = { workspace = true }

# CLI and configuration
clap = { version = "4.6", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
crossfire = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Config helpers
regex = { workspace = true }
humantime-serde = { workspace = true }
chrono = { workspace = true }

# Metrics
prometheus = { workspace = true }

# File watching for hot reload
notify = { workspace = true }

# Hostname for metrics instance label + delta mode
gethostname = { workspace = true }
uuid = { workspace = true, optional = true }
xxhash-rust = { workspace = true, optional = true }

# Vendored OpenSSL for musl cross-compilation (behind vendored-openssl feature)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Allocator: jemalloc for reduced fragmentation in Ring 1/2 (Unix only).
# tikv-jemallocator does not support Windows MSVC.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

# Allocator: mimalloc for Windows MSVC where jemalloc is unavailable.
[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Cross-platform defaults.
default = [
    "jemalloc",
    "mimalloc",
    "kafka",
    "websocket",
    "delta",
    "iceberg",
    "postgres-cdc",
    "postgres-sink",
    "mysql-cdc",
    "mongodb-cdc",
    "files",
    "parquet-lookup",
    "otel",
]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
# Connector features (forwarded to laminar-db → laminar-connectors)
kafka = ["laminar-db/kafka"]
websocket = ["laminar-db/websocket"]
postgres-cdc = ["laminar-db/postgres-cdc"]
postgres-sink = ["laminar-db/postgres-sink"]
mysql-cdc = ["laminar-db/mysql-cdc"]
mongodb-cdc = ["laminar-db/mongodb-cdc"]
delta-lake = ["laminar-db/delta-lake"]
delta-lake-s3 = ["delta-lake", "laminar-db/delta-lake-s3"]
delta-lake-azure = ["delta-lake", "laminar-db/delta-lake-azure"]
delta-lake-gcs = ["delta-lake", "laminar-db/delta-lake-gcs"]
delta-lake-unity = ["delta-lake", "laminar-db/delta-lake-unity"]
delta-lake-glue = ["delta-lake", "laminar-db/delta-lake-glue"]
# Meta-feature: all Delta Lake backends + catalogs
delta = ["delta-lake", "delta-lake-s3", "delta-lake-azure", "delta-lake-gcs", "delta-lake-unity", "delta-lake-glue", "laminar-db/delta-lake-all"]
iceberg = ["laminar-db/iceberg"]
files = ["laminar-db/files"]
otel = ["laminar-db/otel"]
parquet-lookup = ["laminar-db/parquet-lookup"]
# Cloud object store backends for checkpoints
aws = ["laminar-db/aws"]
gcs = ["laminar-db/gcs"]
azure = ["laminar-db/azure"]
# Compile OpenSSL from source — required for musl cross-compilation where
# system libssl-dev is not available for the target triple.
# Cluster mode: experimental multi-node support. NOT production-ready —
# requires Raft, inter-node RPC, and partition-aware routing that are not
# yet implemented. Gated so the default binary does not advertise it.
cluster-unstable = [
    "laminar-core/cluster-unstable",
    "laminar-db/cluster-unstable",
    "dep:uuid",
    "dep:xxhash-rust",
]
vendored-openssl = ["dep:openssl"]
