[package]
name = "laminar-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_server"
description = "Standalone server binary for LaminarDB"
publish = false

[[bin]]
name = "laminardb"
path = "src/main.rs"

[[bin]]
name = "hash_test"
path = "src/bin/hash_test.rs"
required-features = ["cluster"]

[dependencies]
# LaminarDB crates. laminar-db re-exports the rest of the workspace; the
# server only needs the unified facade plus laminar-core for things like
# metrics types referenced directly.
laminar-core = { path = "../laminar-core", version = "0.26.0" }
laminar-db = { path = "../laminar-db", version = "0.26.0", features = ["api", "remote", "local"] }
laminar-sql = { path = "../laminar-sql", version = "0.26.0" }

# For pgwire dispatch on parsed AST
sqlparser = { workspace = true }

# Arrow (for WS JSON serialization + pgwire row encoder)
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
parking_lot = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }

# CLI and configuration
clap = { version = "4.6", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
# CancellationToken for the cluster leader-lease renewal loop (cluster).
tokio-util = { workspace = true, optional = true }
crossfire = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Postgres wire with optional TLS (aws-lc-rs backend). pg-type-chrono and
# pg-type-rust-decimal pull in the postgres-types ToSql impls used by the
# extended-query binary-format encoders for TIMESTAMP/DATE/NUMERIC columns.
pgwire = { version = "0.40", default-features = false, features = [
    "server-api",
    "_aws-lc-rs",
    "pg-type-chrono",
    "pg-type-rust-decimal",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
rustls-pemfile = "2"
x509-parser = "0.16"
md-5 = "0.10"
time = "0.3"
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
percent-encoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }

# Config helpers
regex = { workspace = true }
humantime-serde = { workspace = true }
chrono = { workspace = true }

# Metrics
prometheus = { workspace = true }

# File watching for hot reload
notify = { workspace = true }

# Hostname for metrics instance label + cluster mode
gethostname = { workspace = true }
uuid = { workspace = true, optional = true }
xxhash-rust = { workspace = true, optional = true }

# Vendored OpenSSL for musl cross-compilation (behind vendored-openssl feature)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Allocator: jemalloc for reduced fragmentation in Ring 1/2 (Unix only).
# tikv-jemallocator does not support Windows MSVC.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

# Allocator: mimalloc for Windows MSVC where jemalloc is unavailable.
[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
rcgen = "0.13"
serde_json = { workspace = true }

# Kafka consumer/admin used by the cluster_soak exactly-once output diff.
# Same per-platform split as laminar-db's kafka_docker_scenarios dev-dep
# (Windows resolves OpenSSL via OPENSSL_DIR instead of the ssl feature).
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "ssl"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build"] }

[features]
# Cross-platform defaults.
default = [
    "jemalloc",
    "mimalloc",
    "kafka",
    "websocket",
    "delta",
    "iceberg",
    "postgres-cdc",
    "postgres-sink",
    "mysql-cdc",
    "mongodb-cdc",
    "nats",
    "files",
    "parquet-lookup",
    "otel",
    "cluster",
    "state-tier",
    "aws",
    "gcs",
    "azure",
]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
# Connector features (forwarded to laminar-db → laminar-connectors)
kafka = ["laminar-db/kafka"]
websocket = ["laminar-db/websocket"]
postgres-cdc = ["laminar-db/postgres-cdc"]
postgres-sink = ["laminar-db/postgres-sink"]
mysql-cdc = ["laminar-db/mysql-cdc"]
mongodb-cdc = ["laminar-db/mongodb-cdc"]
nats = ["laminar-db/nats"]
delta-lake = ["laminar-db/delta-lake"]
delta-lake-s3 = ["delta-lake", "laminar-db/delta-lake-s3"]
delta-lake-azure = ["delta-lake", "laminar-db/delta-lake-azure"]
delta-lake-gcs = ["delta-lake", "laminar-db/delta-lake-gcs"]
delta-lake-unity = ["delta-lake", "laminar-db/delta-lake-unity"]
delta-lake-glue = ["delta-lake", "laminar-db/delta-lake-glue"]
# Meta-feature: all Delta Lake backends + catalogs
delta = ["delta-lake", "delta-lake-s3", "delta-lake-azure", "delta-lake-gcs", "delta-lake-unity", "delta-lake-glue", "laminar-db/delta-lake-all"]
iceberg = ["laminar-db/iceberg"]
files = ["laminar-db/files"]
otel = ["laminar-db/otel"]
parquet-lookup = ["laminar-db/parquet-lookup"]
# Cloud object store backends for checkpoints
aws = ["laminar-db/aws", "laminar-core/aws"]
gcs = ["laminar-db/gcs", "laminar-core/gcs"]
azure = ["laminar-db/azure", "laminar-core/azure"]
# Compile OpenSSL from source — required for musl cross-compilation where
# system libssl-dev is not available for the target triple.
# Cluster mode.
cluster = [
    "laminar-core/cluster",
    "laminar-db/cluster",
    "dep:uuid",
    "dep:xxhash-rust",
    "dep:tokio-util",
    "dep:reqwest",
]
# Disk cold tier for demoted operator state (experimental). Implies cluster.
state-tier = ["cluster", "laminar-db/state-tier"]
vendored-openssl = ["dep:openssl"]
