[package]
name = "laminar-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_storage"
description = "Storage layer for LaminarDB - checkpoint persistence and object store integration"

[dependencies]
# Storage
object_store = "0.13"  # For cloud storage

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Base64 encoding for operator state in checkpoint manifests
base64 = { workspace = true }

# Checkpoint integrity
sha2 = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }

[features]
default = []

aws = ["object_store/aws"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]

[dev-dependencies]
tempfile = { workspace = true }
