[package]
name = "binance-ws"
version = "0.21.5"
edition = "2021"
publish = false
description = "Binance VWAP signals: minimal LaminarDB streaming example"

[[bin]]
name = "binance-ws"
path = "src/main.rs"

[dependencies]
laminar-db = { path = "../../crates/laminar-db", version = "0.21.5", features = ["websocket"] }
laminar-derive = { path = "../../crates/laminar-derive", version = "0.21.5" }
arrow = "57.2"
tokio = { version = "1.50", features = ["full"] }
crossterm = "0.29"
ratatui = { version = "0.30", features = ["all-widgets"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
