[package]
name = "microstructure"
version = "0.17.0"
edition = "2021"
publish = false
description = "Market Microstructure Intelligence: 12 WebSocket streams, 36 SQL stages, sub-us latency"

[[bin]]
name = "microstructure"
path = "src/main.rs"

[dependencies]
laminar-db = { path = "../../crates/laminar-db", version = "0.17.0", features = ["websocket"] }
laminar-derive = { path = "../../crates/laminar-derive", version = "0.17.0" }
arrow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
crossterm = "0.29"
ratatui = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
