[package]
name = "state-tier-bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "Benchmark gate for the state cold tier: fjall under streaming-state-shaped workloads"

[dependencies]
fjall = "3.1"
rand = "0.9"
rand_distr = "0.5"
hdrhistogram = "7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# Standalone on purpose: fjall must not enter the main workspace lockfile
# until the benchmark gate passes.
[workspace]
