# Standalone parse-validator for demo.sql.
#
# Excluded from the main workspace (`exclude = ["examples/*"]` in the
# root Cargo.toml). Path-deps into the workspace crates so a single
# `cargo run` here picks up whatever laminar-sql is on disk.

[package]
name        = "demo-validate"
version     = "0.0.0"
edition     = "2021"
publish     = false
description = "Parse-only validator for demo.sql (no laminar CLI exists; AUDIT.md §5)."

[workspace]
# Empty so this crate is its own workspace and inherits no membership
# from the parent.

[dependencies]
laminar-sql = { path = "../../../crates/laminar-sql" }
